update gradle, simpler way to print to console